--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "modules/pytube"]
 	path = modules/pytube
 	url = https://github.com/kidonaru/pytube.git
+[submodule "magenta"]
+	path = magenta
+	url = https://github.com/kidonaru/magenta.git
