--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,6 @@ numpy==1.23.5
 pretty_midi==0.2.10
 demucs==4.0.0
 moviepy==1.0.3
-pytube==12.1.2
-mock==5.0.1
+#pytube==15.0.0
 japanize_matplotlib==1.1.3
+beautifulsoup4
