--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,8 +20,14 @@ jobs:
 
     - name: Install dependencies
       run: |
+        git submodule update --init --recursive
+        
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+
+        cd pytube
+        pip install -e .
+        cd ..
 
     - name: Run tests
       run: python -m unittest discover -s ./tests
