--- a/requirements.txt
+++ b/requirements.txt
@@ -6,28 +6,31 @@ demucs==4.0.0
 moviepy==1.0.3
 #pytube==15.0.0
 japanize_matplotlib==1.1.3
-beautifulsoup4
+beautifulsoup4==4.12.2
 
 # for magenta
 tensorflow
 keras
-absl-py
-dm-sonnet
-imageio
-matplotlib
-mido
-mir_eval
-note-seq
-numba
-Pillow
-pygtrie
-python-rtmidi
-scikit-image
-scipy
-six
-sk-video
-sox
+absl-py==1.4.0
+dm-sonnet==2.0.1
+imageio==2.29.0
+matplotlib==3.7.1
+mido==1.2.10
+mir_eval==0.7
+note-seq==0.0.5
+numba==0.57.0
+Pillow==9.5.0
+pygtrie==2.5.0
+python-rtmidi==1.5.0
+scikit-image==0.20.0
+scipy==1.10.1
+six==1.16.0
+sk-video==1.1.10
+sox==1.4.1
 tensorflow-datasets
 tensorflow-probability
-tf_slim
-wheel
+tf_slim==1.1.0
+wheel==0.40.0
+
+bokeh==2.4.3
+pyFluidSynth==1.3.2
