--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,9 +25,9 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
-        cd pytube
+        cd modules/pytube
         pip install -e .
-        cd ..
+        cd ../..
 
     - name: Run tests
       run: python -m unittest discover -s ./tests
