--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "pytube"]
-	path = pytube
+[submodule "modules/pytube"]
+	path = modules/pytube
 	url = https://github.com/kidonaru/pytube.git
