magentaのパス修正

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "modules/pytube"]
 	path = modules/pytube
 	url = https://github.com/kidonaru/pytube.git
-[submodule "magenta"]
-	path = magenta
+[submodule "modules/magenta"]
+	path = modules/magenta
 	url = https://github.com/kidonaru/magenta.git
