--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,9 +29,9 @@ jobs:
         pip install -e .
         cd ../..
 
-        cd magenta
+        cd modules/magenta
         pip install -e . --no-dependencies
-        cd ..
+        cd ../..
 
     - name: Run tests
       run: python -m unittest discover -s ./tests
