--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,5 +33,9 @@ jobs:
         pip install -e . --no-dependencies
         cd ../..
 
+        cd modules/pyfluidsynth
+        pip install -e .
+        cd ../..
+
     - name: Run tests
       run: python -m unittest discover -s ./tests
