--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ beautifulsoup4==4.12.2
 tensorflow
 tensorflow-datasets
 tensorflow-probability
-keras
+keras==2.12.0
 mir_eval==0.7
 note-seq==0.0.5
 sox==1.4.1
