--- a/requirements.txt
+++ b/requirements.txt
@@ -4,15 +4,15 @@ numpy==1.23.5
 pretty_midi==0.2.10
 demucs==4.0.0
 moviepy==1.0.3
-#pytube==15.0.0
 japanize_matplotlib==1.1.3
 beautifulsoup4==4.12.2
 tensorflow
 tensorflow-datasets
-tensorflow-probability
+tensorflow-probability==0.20.0
 keras==2.12.0
 mir_eval==0.7
 note-seq==0.0.5
 sox==1.4.1
 tf_slim==1.1.0
 bokeh==2.4.3
+yt-dlp
