--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,6 +25,10 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
+        cd modules/pytube
+        pip install -e .
+        cd ../..
+
         cd modules/magenta
         pip install -e . --no-dependencies
         cd ../..
