--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "modules/pyfluidsynth"]
 	path = modules/pyfluidsynth
 	url = https://github.com/kidonaru/pyfluidsynth.git
+[submodule "modules/pytube"]
+	path = modules/pytube
+	url = https://github.com/kidonaru/pytube.git
